--- a/css/main.css
+++ b/css/main.css
@@ -2849,7 +2849,7 @@ pre .javascript .function {
   opacity: 1;
 }
 .sidebar {
-  margin-left: -100%;
+  margin-left: 0;
   right: auto;
   bottom: auto;
   -webkit-transform: none;
@@ -2862,6 +2862,7 @@ pre .javascript .function {
   box-shadow: initial;
   border-radius: initial;
   opacity: 0;
+  position: fixed;
 }
 .sidebar-inner.affix {
   position: fixed;
@@ -2996,13 +2997,13 @@ pre .javascript .function {
   display: flex;
   justify-content: space-around; /* Distributes space evenly around items */
   align-items: center;
-  gap: 20px; /* Adds space between logos */
-  padding: 20px;
+  gap: 10px; /* Adds space between logos */
+  padding: 10px;
   flex-wrap: wrap; /* Allows wrapping if needed */
 }
 .logo-container img {
-  max-height: 100px; #Adjust the size as needed
-  height: auto; /* Maintain aspect ratio */
+  max-height: 100px; /*Adjust the size as needed*/
+  height: auto; /*Maintain aspect ratio */
 }
 
 
